# bitwarden-desktop-agent

./: .gitignore  .gitmodules  Cargo.toml  Makefile  askpass.py  auth.py  bridge.py  bw-agent  com.8bit.bitwarden.json  crypto.py  desktop_proxy.py  gui.py  ipc.py  log.py  native_messaging.py  secmem.py
docs/: bw-agent.service  com.8bit.bitwarden.json.chromium  com.8bit.bitwarden.json.firefox  com.8bit.bitwarden.json.json  com.bitwarden.agent.plist
src/: askpass.rs  auth.rs  bridge.rs  crypto.rs  ipc.rs  log.rs  main.rs  proxy.rs
src/sep/: sep-helper.entitlements  sep-helper.swift
src/storage/: mod.rs  pin.rs  sep.rs  tpm2.rs
storage/: __init__.py  pin.py  tpm2.py
