[package]
name = "desktop-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bw-agent"
path = "src/main.rs"

[[bin]]
name = "bw-proxy"
path = "src/proxy.rs"

[dependencies]
aes = "0.8"
argon2 = "0.5"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
hex = "0.4"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["sha2"] }
rand = "0.8"
rsa = { version = "0.9", features = ["sha1"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"

[profile.release]
strip = true
lto = true
